# vmac

./: .clang-format  .gitignore  .project_env  CMakeBuildOpts.txt  CMakeLists.txt  README.md  TODO.md
src/common/: CMakeLists.txt  alloc.c  alloc.h  cmdline.c  cmdline.h  colors.c  colors.h  common.h  error.c  error.h  find_file.c  find_file.h  hexdump.c  hexdump.h  input_buffer.c  input_buffer.h  output_buffer.c  output_buffer.h  pointer_list.c  string_buffer.c  string_buffer.h  string_list.c  string_list.h  trace.c  trace.h
src/common/gc/: CMakeLists.txt  allchblk.c  alloc.c  blacklst.c  dbg_mlc.c  dyn_load.c  finalize.c  fnlz_mlc.c  gc_dlopen.c  gcj_mlc.c  headers.c  mach_dep.c  malloc.c  mallocx.c  mark.c  mark_rts.c  misc.c  new_hblk.c  obj_map.c  os_dep.c  pthread_start.c  pthread_stop_world.c  pthread_support.c  ptr_chck.c  reclaim.c  specific.c  thread_local_alloc.c  typd_mlc.c
src/common/gc/cord/: cordbscs.c  cordprnt.c  cordxtra.c
src/common/gc/include/gc/: cord.h  cord_pos.h  ec.h  gc.h  gc_allocator.h  gc_backptr.h  gc_config_macros.h  gc_cpp.h  gc_disclaim.h  gc_gcj.h  gc_inline.h  gc_mark.h  gc_pthread_redirects.h  gc_tiny_fl.h  gc_typed.h  gc_version.h  javaxfc.h  leak_detector.h
src/common/gc/include/private/: darwin_semaphore.h  dbg_mlc.h  gc_alloc_ptrs.h  gc_atomic_ops.h  gc_hdrs.h  gc_locks.h  gc_pmark.h  gc_priv.h  gcconfig.h  (+3 more)
src/macros/: CMakeLists.txt  README.md  emit.c  emit.h  macros.c  parse.c  parse.h  parse_define.c  parse_define.h  parse_expr.c  parse_expr.h  parse_ifelse.c  parse_ifelse.h  parse_ref.c  parse_ref.h  symbols.c  symbols.h
(+18 files in other folders)
